--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,14 +16,13 @@
                 <h1>Yin Chengzhi's Personal Website</h1>
             </header>
             <section>
-
                 <hr>
                 <h2>About</h2>
                 <p>A front-end software engineer, working in Shanghai, and active in the front-end community.</p>
                 <p>And a mountain climber, love movies and outdoor travel.</p>
                 <p>And know me more, welcome to my <a href="https://czyin.me" target="_blank">Blog</a>.</p>
 
-                <small>(The background picture was taken in Maya snow mountain, July 22, 2015)</small>
+                <small class="ps">(The background picture was taken in Maya snow mountain, July 22, 2015)</small>
 
                 <hr>
                 <h2>Recently</h2>
@@ -44,15 +43,11 @@
             <footer>
                 <p>
                     <small>
-                        ©
-                        <b title="尹成志">Yin Chengzhi</b>
-                        1990-2017, some rights reserved.
+                        copyrighted ©1990-2017 <b title="尹成志">Yin Chengzhi</b>
                     </small>
                 </p>
             </footer>
         </div>
     </div>
-
 </body>
-
 </html>
