--- a/src/views/index.html
+++ b/src/views/index.html
@@ -22,7 +22,7 @@
                 <p>A mountain climber, love movies and outdoor travel.</p>
                 <p>And know more about me, welcome to my <a href="https://czyin.me" target="_blank">chinese blog</a>.</p>
 
-                <small class="ps">(The background picture was taken in Maya snow mountain, July 22, 2015)</small>
+                <!-- <small class="ps">(The background picture was taken in Maya snow mountain, July 22, 2015)</small> -->
 
                 <hr>
                 <h2>Recently</h2>
