--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,53 +2,54 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Yin Chengzhi's Personal Website</title>
-    <link rel="stylesheet" href="styles/main.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Yin Chengzhi's Personal Website</title>
+  <link rel="stylesheet" href="styles/main.min.css">
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="inner">
-            <header>
-                <h1>Yin Chengzhi's Personal Website</h1>
-            </header>
-            <section>
-                <hr>
-                <h2>About</h2>
-                <p>A front-end software engineer, working in Shanghai, and active in the front-end community.</p>
-                <p>A mountain climber, love movies and outdoor travel.</p>
-                <p>And know more about me, welcome to my <a href="https://czyin.me" target="_blank">chinese blog</a>.</p>
+  <div class="wrapper">
+    <div class="inner">
+      <header>
+        <h1>Yin Chengzhi's Personal Website</h1>
+      </header>
+      <section>
+        <hr>
+        <h2>About</h2>
+        <p>A front-end software engineer, working in Shanghai, and active in the front-end community.</p>
+        <p>A mountain climber, love movies and outdoor travel.</p>
+        <p>And know more about me, welcome to my <a href="https://czyin.me" target="_blank">chinese blog</a>.</p>
 
-                <!-- <small class="ps">(The background picture was taken in Maya snow mountain, July 22, 2015)</small> -->
+        <!-- <small class="ps">(The background picture was taken in Maya snow mountain, July 22, 2015)</small> -->
 
-                <hr>
-                <h2>Recently</h2>
-                <ul>
-                    <li>2017-01-12 <a href="https://yq.aliyun.com/activity/145" target="_blank">WEEX Conf</a> Participance</li>
-                    <li>2016-12-17 <a href="https://css.w3ctech.com/" target="_blank">中国第三届CSS开发者大会</a> Participance(VIP)</li>
-                    <li>2016-12-10 <a href="https://segmentfault.com/sfdc-2016/hz" target="_blank">SFDC 2016 杭州站</a> Participance</li>
-                    <li>2016-11-07 Speed ascents of <a href="images/IMG_9787.JPG" target="_blank">Mount Siguniang ErFeng(5,276M)</a></li>
-                </ul>
-                <hr>
-                <h2>Contact</h2>
-                <ul>
-                    <li>Github <a href="https://github.com/czyin">@czyin</a></li>
-                    <li>Codepen <a href="https://codepen.io/czyin">@czyin</a></li>
-                    <li>Twitter <a href="https://twitter.com/_czyin">@_czyin</a></li>
-                </ul>
-            </section>
-            <footer>
-                <p>
-                    <small>
-                        copyrighted ©1990-2017 <b title="尹成志">Yin Chengzhi</b>
-                    </small>
-                </p>
-            </footer>
-        </div>
+        <hr>
+        <h2>Recently</h2>
+        <ul>
+          <li>2017-04-08 <a href="http://fdcon.topgeek.org/" target="_blank">第二届中国前端开发者大会</a></li>
+          <li>2017-01-12 <a href="https://yq.aliyun.com/activity/145" target="_blank">WEEX Conf</a></li>
+          <li>2016-12-17 <a href="https://css.w3ctech.com/" target="_blank">中国第三届CSS开发者大会</a></li>
+          <li>2016-12-10 <a href="https://segmentfault.com/sfdc-2016/hz" target="_blank">SFDC 2016 杭州站</a></li>
+          <li>2016-11-07 Speed ascents of <a href="images/IMG_9787.JPG" target="_blank">Mount Siguniang ErFeng(5,276M)</a></li>
+        </ul>
+        <hr>
+        <h2>Contact</h2>
+        <ul>
+          <li>Github <a href="https://github.com/czyin">@czyin</a></li>
+          <li>Codepen <a href="https://codepen.io/czyin">@czyin</a></li>
+          <li>Twitter <a href="https://twitter.com/_czyin">@_czyin</a></li>
+        </ul>
+      </section>
+      <footer>
+        <p>
+          <small>
+            copyrighted ©1990-2017 <b title="尹成志">Yin Chengzhi</b>
+          </small>
+        </p>
+      </footer>
     </div>
+  </div>
 </body>
 
 </html>
