--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,7 +20,7 @@
         <h2>About</h2>
         <p>A front-end software engineer, working in Shanghai, and active in the front-end community.</p>
         <p>A mountain climber, love movies and outdoor travel.</p>
-        <p>And know more about me, welcome to my <a href="https://czyin.me" target="_blank">chinese blog</a>.</p>
+        <!-- <p>And know more about me, welcome to my <a href="https://czyin.me" target="_blank">chinese blog</a>.</p> -->
 
         <!-- <small class="ps">(The background picture was taken in Maya snow mountain, July 22, 2015)</small> -->
 
