--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,7 +19,7 @@
         <hr>
         <h2>About</h2>
         <p>A front-end software engineer, working in Shanghai, and active in the front-end community.</p>
-        <p>A mountain climber, love movies and outdoor travel.</p>
+        <p>A mountain climber, Marathon runner, and love movies and outdoor travel.</p>
         <!-- <p>And know more about me, welcome to my <a href="https://czyin.me" target="_blank">chinese blog</a>.</p> -->
 
         <!-- <small class="ps">(The background picture was taken in Maya snow mountain, July 22, 2015)</small> -->
@@ -27,6 +27,8 @@
         <hr>
         <h2>Recently</h2>
         <ul>
+          <li>2017-08-xx Plan to climb <a href="https://en.wikipedia.org/wiki/Yuzhu_Peak" target="_blank">Yuzhu Peak(6,224M)</a> </li>
+          <li>2017-06-11 <a href="http://lanzhoumarathon.org/" target="_blank">2017 LANZHOU INTERNATIONAL MARATHON</a></li>
           <li>2017-04-08 <a href="http://fdcon.topgeek.org/" target="_blank">第二届中国前端开发者大会</a></li>
           <li>2017-01-12 <a href="https://yq.aliyun.com/activity/145" target="_blank">WEEX Conf</a></li>
           <li>2016-12-17 <a href="https://css.w3ctech.com/" target="_blank">中国第三届CSS开发者大会</a></li>
@@ -39,6 +41,7 @@
           <li>Github <a href="https://github.com/czyin">@czyin</a></li>
           <li>Codepen <a href="https://codepen.io/czyin">@czyin</a></li>
           <li>Twitter <a href="https://twitter.com/_czyin">@_czyin</a></li>
+          <li>Blog <a href="https://czyin.me">czyin.me</a></li>
         </ul>
       </section>
       <footer>
