--- a/src/views/index.html
+++ b/src/views/index.html
@@ -29,6 +29,7 @@
         <ul>
           <li>2017-08-xx Plan to climb <a href="https://en.wikipedia.org/wiki/Yuzhu_Peak" target="_blank">Yuzhu Peak(6,224M)</a> </li>
           <li>2017-07-15 <a href="http://2017.jsconf.cn/" target="_blank">2017 JavaScript Conf China</a></li>
+          <li>2017-05-04 <a href="http://bxt.baixing.com.cn/" target="_blank">BXT 技术沙龙</a></li>
           <li>2017-04-08 <a href="http://fdcon.topgeek.org/" target="_blank">第二届中国前端开发者大会</a></li>
           <li>2017-01-12 <a href="https://yq.aliyun.com/activity/145" target="_blank">WEEX Conf</a></li>
           <li>2016-12-17 <a href="https://css.w3ctech.com/" target="_blank">中国第三届CSS开发者大会</a></li>
